Font Size And Spacing fixing

--- a/faisal.css
+++ b/faisal.css
@@ -460,16 +460,18 @@
   height: 35rem;
 }
 .hero-title {
-  font-style: normal;
-  font-weight: 800;
-  line-height: 1.08;
-  letter-spacing: -0.035em;
-  color: #fff;
-  max-width: 50rem;
+	font-style: normal;
+	font-weight: 500;
+	line-height: 1.08;
+	letter-spacing: -0.035em;
+	color: #fff;
+	max-width: 47rem;
 }
 .hero-description {
-  max-width: 40.5rem;
-  margin-top: 1.5rem;
+	max-width: 41rem;
+	margin-top: 1.5rem;
+	font-size: 1.25rem;
+	line-height: 150%;
 }
 .hero-buttons {
 	margin-top: 2.5rem;
@@ -542,9 +544,16 @@
 	padding-right: 3.75rem;
 }
 .content-section-content.content-intro-width.text-center .content-intro-description {
-	max-width: 50rem;
+  font-size: 1.25rem;
+	line-height: 150%;
+	max-width: 60rem;
 	margin-top: 1.625rem;
 	padding-bottom: 36px;
+
+}
+
+.has-image .content-section-content.content-intro-width.text-center .content-intro-description {
+	max-width: 83rem;
 }
 
 .content-intro-section {
@@ -655,6 +664,8 @@
   margin: 0;
 }
 .mc5050-body.wysiwyg-content p {
+  font-size: 1.25rem;
+	line-height: 150%;  
 	margin-top: 1.875rem;
 }
 /* .mc5050-body.wysiwyg-content p:last-child {
@@ -673,6 +684,8 @@
 }
 
 .mc5050-body.wysiwyg-content ul li {
+    font-size: 1.25rem;
+	  line-height: 150%;
     position: relative;
     padding-left: 1rem;
     color: var(--bright-color-dark);
@@ -923,7 +936,9 @@
   letter-spacing: -0.03em;
 }
 .image-card-grid-section-body {
-	max-width: 50rem;
+  font-size: 1.25rem;
+	line-height: 150%;
+	max-width: 52rem;
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 1.875rem;
@@ -1004,10 +1019,7 @@
 	line-height: 118.75%;
 }
 .highlight-card-body {
-  font-size: 1rem;
   font-style: normal;
-  font-weight: 400;
-  line-height: 156.25%;
   margin-top: .5rem;
 }
 @media only screen and (max-width: 991px) {
@@ -1054,6 +1066,7 @@
 	color: var(--bright-color-light);
 	line-height: 1.12;
 	letter-spacing: -0.03em;
+	font-weight: 500;
 }
 .contact-cta-content {
 	position: relative;
@@ -1346,7 +1359,7 @@
   letter-spacing: -0.318px;
 }
 .footer-copyright-text {
-  max-width: 9.25rem;
+	max-width: 10.25rem;
 }
 .footer-right ul {
   margin: 0;
