--- a/imran.css
+++ b/imran.css
@@ -72,7 +72,7 @@
 ----------------------------------------------- */
 
 .how-it-works-section-body {
-	max-width: 53.75rem;
+	max-width: 56rem;
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 1.75rem;
@@ -474,7 +474,9 @@
 }
 
 .full-width-media-description {
-	max-width: 40rem;
+  font-size: 1.25rem;
+	line-height: 150%;
+	max-width: 50rem;
 	margin-top: 10px;
 }
 .full-width-media-buttons {
